# python-logger

./: .gitignore  pyproject.toml
.github/workflows/: docs.yml  lint.yml
docs/: api.rst  conf.py  index.rst
src/logger/: __init__.py  error.py  warn.py
tests/: test_logger.py
