[project]
name = "logger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "karim.gabr", email = "karim.gabr@your-project.ch" }
]
requires-python = ">=3.14"
dependencies = [
    "sphinx>=9.0.4",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]
